# aeris_new

./: .gitignore  README.md
embedded/robot/firmware/: Doxyfile  Makefile  configure  main.cpp
embedded/robot/firmware/kodama/: kodama.cpp  kodama.h  wifi.cpp  wifi.h  wifi_config.h  wifi_packet.h
embedded/robot/firmware/makefiles/: Makefile_aeris  Makefile_motoko
embedded/robot/firmware/suzuha/: options.h  suzuha_os.h
embedded/robot/firmware/usr/: demo.cpp  demo.h  learning_line_follower.cpp  learning_line_follower.h
embedded/robot/hardware/expansion_board/: expansion_board.b#1  expansion_board.b#2  expansion_board.b#3  expansion_board.b#4  expansion_board.b#5  expansion_board.b#6  expansion_board.b#7  expansion_board.b#8  expansion_board.b#9  expansion_board.boardoutline.ger  expansion_board.boardoutline.gpi  expansion_board.bottomlayer.ger  expansion_board.bottomsilkscreen.ger  expansion_board.brd  expansion_board.cmp  expansion_board.drd  expansion_board.dri  expansion_board.drills.xln  expansion_board.gpi  expansion_board.plc  expansion_board.s#1  expansion_board.s#2  expansion_board.s#3  expansion_board.s#4  expansion_board.s#5  expansion_board.s#6  expansion_board.s#7  expansion_board.s#8  expansion_board.s#9  expansion_board.sch  expansion_board.stc  expansion_board.sts  expansion_board.toplayer.ger  expansion_board.toplayer.gpi  expansion_board.topsilkscreen.ger  expansion_board.topsoldermask.gpi
embedded/robot/hardware/expansion_board (copy)/: expansion_board.bottomlayer.gpi  expansion_board.bottomsilkscreen.gpi  expansion_board.bottomsoldermask.ger  expansion_board.bottomsoldermask.gpi  expansion_board.drills.dri  expansion_board.tcream.ger  expansion_board.tcream.gpi  expansion_board.topsilkscreen.gpi  expansion_board.topsoldermask.ger
embedded/robot/hardware/led_board/: led_board.brd  led_board.sch
embedded/robot/hardware/main_board/: main.brd  main.sch
embedded/robot/hardware/main_board_rev_2/: main.brd  main.sch
embedded/robot/hardware/main_board_rev_3/: main.b#1  main.boardoutline.ger  main.boardoutline.gpi  main.bottomlayer.ger  main.bottomlayer.gpi  main.bottomsilkscreen.ger  main.bottomsilkscreen.gpi  main.bottomsoldermask.ger  main.bottomsoldermask.gpi  main.brd  main.drills.dri  main.drills.xln  main.s#1  main.sch  main.tcream.ger  main.tcream.gpi  main.toplayer.ger  main.toplayer.gpi  main.topsilkscreen.ger  main.topsilkscreen.gpi  main.topsoldermask.ger  main.topsoldermask.gpi
embedded/robot/hardware/mcu_board/: macu_board.brd  macu_board.sch
embedded/robot/hardware/null/: main.brd  main.sch
embedded/robot/hardware/sensor_board/: sensor_board.brd  sensor_board.sch
main/: meson.build
main/config/: config.json  demo-ba-config.json
main/doc/: Doxyfile
main/src/: meson.build
main/src/agent-group/: main.cpp  meson.build
main/src/agents/: meson.build
main/src/camera/: detector.cpp  detector.h  main_tracking.cpp  meson.build  robot_tracking.cpp  robot_tracking.h  segmentation.cpp  segmentation.h  svm_training.cpp  svm_training.h  tracking.cpp  tracking.h
main/src/common/: agent.cpp  agent.h  agent_body.cpp  agent_body.h  agent_client.cpp  agent_client.h  agent_group.cpp  agent_group.h  agent_server.cpp  agent_server.h  communication_header.h  config.cpp  config.h  logging.h  meson.build  plugin.cpp  plugin.h  plugin_init.cpp  signals.cpp  signals.h  socket.cpp  socket.h  timing.cpp  timing.h  types.h
main/src/group_test/: main.cpp  meson.build
main/src/plugins/: meson.build
main/src/plugins/line/: elipse_line.cpp  elipse_line.h  meson.build  plugin.cpp
main/src/plugins/visualisation/: meson.build  plugin.cpp  visualisation_agent.cpp  visualisation_agent.h
main/src/server/: agent_server.cpp  agent_server.h  main.cpp  meson.build
src/main/: Makefile  bash-env.sh  build  clean  configure.txt  log.config  meson.build  parselog.py  run  run-line  run2  run_demo  stop
src/main/agent_test/: Makefile  example_agent.cpp  example_agent.h  main.cpp  meson.build
src/main/ant/: ant_agent.cpp  ant_agent.h  main.cpp  meson.build
src/main/arena/: Makefile  arena_agent.cpp  arena_agent.h  main.cpp  meson.build
src/main/base/: base_agent.cpp  base_agent.h  main.cpp  meson.build
src/main/border/: border_agent.cpp  border_agent.h  main.cpp  meson.build
src/main/common/: Makefile  aeris_mode.h  agent.cpp  agent.h  agent_body.cpp  agent_body.h  agent_group.cpp  agent_group.h  agent_input.cpp  agent_input.h  agent_interface.cpp  agent_interface.h  agent_output.cpp  agent_output.h  client.cpp  client.h  client_local.cpp  client_local.h  common.h  configure.cpp  configure.h  connected_client.cpp  connected_client.h  debug.h  getch.cpp  getch.h  logging.cpp  logging.h  math_robot.cpp  math_robot.h  meson.build  ms_time.cpp  ms_time.h  point3d.h  rt_timer.cpp  rt_timer.h  serialization.cpp  serialization.h  server.cpp  server.h  (+9 more)
src/main/common/agents/: abstract_agent.h  agent.cpp  agent.h  agent_body.cpp  agent_body.h  agent_interface.cpp  agent_interface.h  agents.h  example_agent.cpp  example_agent.h  testing_agent.cpp  testing_agent.h
src/main/common/visualisation/: visualisation.cpp  visualisation.h
src/main/cpp_null/: Makefile  common.h  main.cpp
src/main/food/: Makefile  food_agent.cpp  food_agent.h  main.cpp  meson.build
src/main/line/: line_agent.cpp  line_agent.h  main.cpp  meson.build
src/main/line2/: line_agent.cpp  line_agent.h  main.cpp  meson.build
src/main/mode_bot/: main.cpp  mode_agent.cpp  mode_agent.h
src/main/mode_bot/gui/: gui.cpp
src/main/pheromone/: main.cpp  meson.build  pheromone_agent.cpp  pheromone_agent.h
src/main/robot_bridge/: Makefile  bridge_interface.cpp  bridge_interface.h  main.cpp  robot_bridge_agent.cpp  robot_bridge_agent.h
src/main/robot_bridge/gui/: gl_window.cpp  gl_window.h  gui.cpp  gui.h
src/main/server/: Makefile  main.cpp  meson.build  server.h
src/main/visualisation/: Makefile  main.cpp  meson.build  visualisation_agent.cpp  visualisation_agent.h
src/main/visualisation/visualisation/: visualisation.cpp  visualisation.h
(+83 files in other folders)
