common_src = [
  'agents/agent.cpp',
  'agents/agent_body.cpp',
  'agents/agent_interface.cpp',
  'agent_group.cpp',
  'client.cpp',
  'configure.cpp',
  'getch.cpp',
  'math_robot.cpp',
  'ms_time.cpp',
  'rt_timer.cpp',
  'server.cpp',
  'unique_id.cpp',
  'visualisation_dummy.cpp'
]

common_lib = static_library(
  'common',
  common_src,
  dependencies: thread_dep
)
