common_src = [
  'agents/agent.cpp',
  'agents/agent_body.cpp',
  'agents/agent_interface.cpp',
  'agent_group.cpp',
  'client.cpp',
  'configure.cpp',
  'logging.cpp',
  'math_robot.cpp',
  'ms_time.cpp',
  'rt_timer.cpp',
  'server.cpp',
  'signals.cpp',
  'socket.cpp',
  'unique_id.cpp',
  'visualisation_dummy.cpp'
]

common_lib = static_library(
  'common',
  common_src,
  dependencies: thread_dep
)
